--- a/src/app/rxjsmain.component.html
+++ b/src/app/rxjsmain.component.html
@@ -2,7 +2,7 @@
     <app-main-container class="container container-message align-vertical__center align-horizontal__center"></app-main-container>
     <div class="cardnav">
         <app-card-nav-icon (click)="cardToggle('left')" [type]="'left'" class="container margin-horizontal__large align-horizontal__center"></app-card-nav-icon>
-        <app-card [card]="observables.currentCard" class="card margin-vertical__large"></app-card>
+        <app-card class="card margin-vertical__large"></app-card>
         <app-card-nav-icon (click)="cardToggle('right')" [type]="'right'" class="container margin-horizontal__large align-horizontal__center"></app-card-nav-icon>
     </div>
 </div>
