--- a/src/styles/body/_body.sass
+++ b/src/styles/body/_body.sass
@@ -23,6 +23,7 @@ body
             flex-direction: row
         &__column
             flex-direction: column
+            flex-wrap: nowrap
 
 .align
     &-vertical__center
@@ -158,7 +159,11 @@ button
     font-weight: 100
     text-transform: uppercase
     box-shadow: 1px 1px 5px -2px rgba(66, 68, 90, .4)
-    transition: background-color .3s ease-in
+    transition: background-color .3s ease-in-out
+
+    &:disabled
+        color: colors.$disabled-grey-text
+        background-color: colors.$disabled-grey
 
     &-outline
         background-color: rgba(0, 0, 0, 0)
